--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,11 +40,11 @@ h3 {
   letter-spacing: 1px;
 }
 
-h5 {
+/* h5 {
   color: #ffa400;
   letter-spacing: 4px;
   padding-top: 22px;
-}
+} */
 
 .heading {
   color: #000000;
@@ -62,7 +62,7 @@ a {
 }
 
 hr {
-  width: 120px;
+  width: 100%;
 }
 
 .color-white {
@@ -602,27 +602,24 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 }
 
 #plan .plan {
-  border: 4px solid #ffffff;
-  padding: 40px;
+  color: rgb(7, 0, 0);
+  font-family: "Times New Roman", Times, serif;
+  background: white;
+  border: 2px solid  #ffffff;
+  padding: 10px;
   transition: all 0.4s linear;
-  margin-bottom: 10px;
 }
 
 #plan .plan:hover {
-  background: #000000;
   border-color: #ffa400;
 }
 
+#plan .plan-cost {
+  text-align: center;
+  font-size: 18px;
+}
+
 #plan .plan-title {
-  font-size: 20px;
-}
-
-#plan .plan-title, #plan .plan-price {
-  padding: 5px;
-}
-
-#plan small {
-  color: #ffa400;
   font-size: 20px;
 }
 
@@ -631,22 +628,15 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 }
 
 #plan .plan-button .btn {
-  background: transparent;
-  border: 4px solid #ffffff;
   border-radius: 0;
   color: #ffffff;
-  font-weight: bold;
   letter-spacing: 2px;
   padding: 12px 42px;
-  margin-top: 40px;
-  margin-right: 16px;
+  margin-top: 20px;
   transition: all 0.4s ease-in-out;
 }
 
 #plan .plan-button .btn:hover {
-  background: #ffffff;
-  color: #ffa400;
-  border-color: transparent;
 }
 
 
