contact foorm connecte to database

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,11 +40,11 @@ h3 {
   letter-spacing: 1px;
 }
 
-/* h5 {
+h5 {
   color: #ffa400;
   letter-spacing: 4px;
   padding-top: 22px;
-} */
+}
 
 .heading {
   color: #000000;
